2008-05-03  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/bootstrap.modules: add pyxml.  (closes: #344036)

2008-05-03  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* patches/python-2.4.4-lib64.patch: renamed in
	python-2.4.5-lib64.patch, without distutils "multiarch-"
	lines. See #344036.

2008-05-03  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc, jhbuild/frontends/buildscript.py: added a
	--min-age option for build and buildone commands.  (closes: #384423)

	* doc/C/jhbuild.xml: fixed Docbook correctness.

2008-05-03  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules:
	Update gnome-policykit repo. New repo is on GNOME SVN

2008-05-03  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: added refdbg.

2008-05-02  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
	add --build-optional-modules and --list-optional-modules (respectively
	for the build and list commands) to include modules that would
	otherwise not be built/listed in the dependency graph.

	* doc/C/jhbuild.xml: add documentation for the --force option (for
	build and buildone commands).

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-nettool branched for
	GNOME 2.22.

2008-05-01  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-external-deps-2.24.modules:
	Raise dependency of libxklavier to 3.6 as needed
	by gnome-control-center.

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/mtn.py,
	jhbuild/versioncontrol/tarball.py: aborts with an useful message when a
	branch is incorrectly overrided in .jhbuildrc.
