@@ -1,3 +1,9 @@
+2008-05-05  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/svn.py: use svn switch --relocate when
+	repository location changes, most often because user got its subversion
+	account.  (closes: #531503)
+
 2008-05-03  Marc-André Lureau  <marcandre.lureau@gmail.com>
 
 	* modulesets/bootstrap.modules: add pyxml.  (closes: #344036)
